Fixed CSS issues in the list - Centered loading image - Loading background fills correctly the table - Added minimum height to search box to avoid jumps when search is shown - Changed minimum height of the .content-wrapper to avoid showing the scroll bar when it's not needed

--- a/src/public/crud/css/list.css
+++ b/src/public/crud/css/list.css
@@ -15,17 +15,17 @@
 	#crudTable_wrapper .dataTables_processing {
 		background: rgba(255,255,255,0.9);
 		top: 26px;
-		height: 98%;
+		height: calc(100% - 6px);
 		left: 115px;
-		width: 97%;
+		width: calc(100% - 30px);
 		z-index: 999;
 		border: none;
 		box-shadow: none;
 	}
 
 	#crudTable_wrapper .dataTables_processing > img {
-		top: 48%;
-		left: 48%;
+		top: calc(50% - 16px)!important;
+		left: calc(50% - 16px)!important;
 		position: absolute;
 	}
 
@@ -174,4 +174,16 @@
 	/* datatable header overwrites */
 	table.dataTable {
 		margin-top: 0px!important;
+	}
+
+	.content-wrapper {
+		min-height: calc(100% - 98px);
+	}
+
+	#datatable_search_stack {
+		min-height: 35px;
+	}
+
+	#crudTable thead>tr>th, table.dataTable thead>tr>td {
+		padding-right: 30px;
 	}
